Perfiles agregados y bugs fixeados